parser/src/snapshots/tests__lexer::tests::lex_line_comment.snap
---
created: "2020-05-06T10:43:10.865339800Z"
creator: insta@0.8.2
source: parser/src/lexer.rs
expression: get_tokens(input)
---
[
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
    },
    Span {
        value: Token {
            kind: WHITESPACE,
            len: 1,
        },
        start: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
        end: Position {
            column: 4,
            line: 1,
            absolute: 3,
        },
    },
    Span {
        value: Token {
            kind: COMMENT,
            len: 25,
        },
        start: Position {
            column: 4,
            line: 1,
            absolute: 3,
        },
        end: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
    },
    Span {
        value: Token {
            kind: EOF,
            len: 1,
        },
        start: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
        end: Position {
            column: 29,
            line: 1,
            absolute: 28,
        },
    },
]
